# new_cryptoloop

./: CMakeLists.txt
src/: buffer_split.hpp  crypto.hpp  main.cpp  unit_tests.hpp
